# Qt_AnonymousChatApp

./: CMakeLists.txt  ChatContent.qml  ChatServices.js  ChatSession.qml  CreateChatRoom.qml  CreateNewRoom.qml  CustomDrawer.qml  CustomNotify.qml  HomeScreen.qml  ImageRounded.qml  JoinChatRoom.qml  JoinNewRoom.qml  LandingChat.qml  LoadingPage.qml  Main.qml  MessageReactPopup.qml  MyButton.qml  MyIcon.qml  README.md  Resources.qrc  ThemeSettings.qml  appstate.cpp  appstate.h  clipboardheader.h  cookieservice.cpp  cookieservice.h  groupdata.cpp  groupdata.h  groupmessagemanager.cpp  groupmessagemanager.h  main.cpp  message.cpp  message.h  networkmanager.cpp  networkmanager.h  utils.js  websocketclient.cpp  websocketclient.h
